# matrixbot

./: .gitignore  package.json
experiments/: pyproject.toml
matrixbot/: __main__.py  session.txt
