[tool.poetry]
name = "matrixbot"
version = "0.1.0"
description = "a bot fr matrix"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <3.13"
simplematrixbotlib = "^2.11.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
